create services for concert tab

--- a/myApp/www/templates/tab-dash.html
+++ b/myApp/www/templates/tab-dash.html
@@ -1,5 +1,10 @@
 <ion-view title="Concerts">
   <ion-content class="has-header padding">
-    <h1>Hi</h1>
+   <ion-list>
+      <ion-item ng-repeat="concert in concerts" type="item-text-wrap">
+        <img ng-src={{concert.image[3]['#text']}} alt="">
+        {{ concert.title}}
+      </ion-item>
+    </ion-list>
   </ion-content>
 </ion-view>
