use better file-names for concerts tab

--- a/myApp/www/templates/tabs.html
+++ b/myApp/www/templates/tabs.html
@@ -6,9 +6,9 @@
 <ion-tabs class="tabs-icon-top">
 
 
-  <!-- Dashboard Tab -->
-  <ion-tab title="Concerts" icon="icon ion-ios7-musical-notes" href="#/tab/dash">
-    <ion-nav-view name="tab-dash"></ion-nav-view>
+  <!-- Concerts Tab -->
+  <ion-tab title="Concerts" icon="icon ion-ios7-musical-notes" href="#/tab/concerts">
+    <ion-nav-view name="tab-concerts"></ion-nav-view>
   </ion-tab>
 
 
