add new Attending tab

--- a/myApp/www/templates/tabs.html
+++ b/myApp/www/templates/tabs.html
@@ -10,6 +10,10 @@
   <ion-tab title="Concerts" icon="icon ion-ios7-musical-notes" href="#/tab/concerts">
     <ion-nav-view name="tab-concerts"></ion-nav-view>
   </ion-tab>
+    <!-- Attending Tab -->
+  <ion-tab title="Attending" icon="icon ion-person" href="#/tab/attending">
+    <ion-nav-view name="tab-attending"></ion-nav-view>
+  </ion-tab>
 
 
 
